stage0/tests/sema/veo/20_error_const_redefinition.veo
const STATUS = 1;
// expected-error@+1: variable 'STATUS' is already defined
const STATUS = 2;
